Remove add-opens that are no longer needed.